tests/ui/ser-tuple-struct.stderr
error: currently only structs with named fields are supported
 --> tests/ui/ser-tuple-struct.rs:3:10
  |
3 | #[derive(Serialize)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
